# GFF

./: .gitignore  .justfile  .sops.yaml  allmovies.json  asog-times.json  badgemap.json  bydate.csv  bydate.json  calendar.curl  copyiedquery.curl  definitions.json  do-times.json  entry1.json  entry2.json  fetchImages.sh  films.csv  flake.nix  getIds-partial.sh  getIds.sh  get_showings.sh  gff.jq  ids.json  ids.txt  mainpage.html  movies-2.csv  movies-3-123.json  movies-4-123.json  movies-5-123.json  movies-with-screens.json  movies-with-times-array.json  movies-with-times.json  movies.csv  movies.json  movies.txt  movies2.json  notes.txt  query-bendit.curl  query-martinez.curl  query.curl  ref.json  (+12 more)
brochure/: brochure.json  brochure.typ  filter-summary.typ  gff2024.typst  history.json  in-dexter.typ  person-summary.typ  ref.json  summary.typ
calendar-access/: Cargo.toml  default.nix
calendar-access/.cargo/: config
calendar-access/src/: calendar.rs  main.rs
gff-fetch-summary/: gff-fetch-summary.js  package-lock.json  package.json
gffd/: Cargo.toml  config.json  notes.md
gffd/src/: args.rs  calendar.rs  config.rs  films.rs  main.rs
scripts/: default.nix  fetchImages.sh  getIds.sh  get_showings.sh  gff-make-brochure  gff-make-summary  gff.jq  makeBrochure.sh  showing-to-csv.sh  showing-to-ics.sh
summary/: Cargo.toml  summary.typ
summary/src/: main.rs  typst_map.rs
summary/templates/: brochure.typ  dump.typ  summary.typ
updateCalendar/: filter-summary.js  index.js  package-lock.json
