[package]
name = "calendar-access"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.39"
futures = "0.3.30"
google-calendar3 = "5.0.3"
hyper = { "version"= "^ 0.14", features = ["server","tcp", "http1", "stream"] }
hyper-rustls = "0.24.0"
hyper-util = { version = "0.1.3", features = ["http1", "server", "service", "tokio"] }
serde = { version = "^ 1.0", features = ["derive"] }
serde_json = "^ 1.0"
tls-listener = { version = "0.4", features = ["tokio-rustls", "rustls", "hyper-h1"] }
tokio = { version = "^1.0", features = ["macros", "net", "io-util", "rt", "rt-multi-thread", "fs", "sync"] }
tokio-rustls = "0.23.0"
uuid = { version = "1.7.0", features = ["v4"] }
yup-oauth2 = "8.3.2"

