[package]
name = "summary"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
typst = "0.14.2"
typst-bake = { version = "0.1.6", features = ["full"] }
typst-library = "0.14.2"

[package.metadata.typst-bake]
template-dir = "./templates"  # Path to your .typ files and assets
fonts-dir = "./fonts"         # Path to your font files
